--- a/main.css
+++ b/main.css
@@ -24,8 +24,8 @@ body{
 	padding:10px;
 }
 .is-warning{
-	color:#ff0;
-	background:#ff7;
+	color:#ff3;
+	background:#550;
 }
 .is-danger{
 	background:#f77;
