--- a/main.css
+++ b/main.css
@@ -1,4 +1,7 @@
 body{
+	margin:0;
+	padding:0;
+	overflow-x:hidden;
 	min-height:100vh;
 	background:linear-gradient(-45deg, #f05 100px ,#000 1px);
 	background-size:100% 100%;
